--- a/public/main.css
+++ b/public/main.css
@@ -544,3 +544,25 @@ li {
 .tal{
     text-align: right;
 }
+#loading{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 20;
+    display: none;
+}
+#loading i{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color:#128BFC;
+}
+#CateSearch{
+    width: 90%;
+    margin: 10px 20px;
+    border: 1px solid grey;
+}
