--- a/public/main.css
+++ b/public/main.css
@@ -39,6 +39,7 @@ body{
     justify-content: center;
 }
 .inputField{
+    display: block;
     border: none;
     font-size:  16px;
     /* border: 1px solid grey; */
@@ -589,4 +590,13 @@ li {
 .clearBtn{
     color: black;
     background-color:transparent;
+}
+.regLink{
+    color: rgb(85, 85, 85);
+    text-decoration: none;
+}
+.RegBtn{
+    padding: 10px;
+    width: 100%;
+    text-align: center;
 }
